# pentominos

./: HowToPlay.md  Makefile  Makefile.am  Makefile.in  MyWindow.md  PentominosButton.md  PentominosField.cpp  PentominosField.h  PentominosField.md  PentominosMenuItem.md  PentominosTable.cpp  PentominosTable.h  PentominosTable.md  ProjectHome.md  Source.md  main.cpp  mywindow.cpp  mywindow.h
wiki/: HowToPlay.wiki  MyWindow.wiki  PentominosButton.wiki  PentominosField.wiki  PentominosMenuItem.wiki  PentominosTable.wiki  Source.wiki
